--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "@tuskdesign/source",
-  "workspaces": ["packages/*", "apps/*"],
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {},
-  "dependencies": {}
+	"name": "actapi.js",
+	"workspaces": [
+		"packages/*",
+		"apps/*"
+	],
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "nx run-many -t build"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"nx": "19.3.2"
+	},
+	"dependencies": {}
 }
