--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "actapi.js",
 	"workspaces": [
 		"packages/*",
-		"apps/*"
+		"apps/*",
+		"@actapi.js"
 	],
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
 	"scripts": {
 		"build": "nx run-many -t build"
 	},
@@ -14,7 +14,29 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"nx": "19.3.2"
+		"@nx/eslint": "19.3.2",
+		"@nx/eslint-plugin": "19.3.2",
+		"@nx/jest": "19.3.2",
+		"@nx/js": "19.3.2",
+		"@nx/node": "^19.3.2",
+		"@swc-node/register": "~1.9.1",
+		"@swc/core": "~1.5.7",
+		"@swc/helpers": "~0.5.11",
+		"@types/jest": "^29.4.0",
+		"@types/node": "18.16.9",
+		"@typescript-eslint/eslint-plugin": "^7.3.0",
+		"@typescript-eslint/parser": "^7.3.0",
+		"eslint": "~8.57.0",
+		"eslint-config-prettier": "^9.0.0",
+		"jest": "^29.4.1",
+		"jest-environment-node": "^29.4.1",
+		"nx": "19.3.2",
+		"prettier": "^2.6.2",
+		"ts-jest": "^29.1.0",
+		"ts-node": "10.9.1",
+		"typescript": "~5.4.2"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"tslib": "^2.3.0"
+	}
 }
