--- a/@actapi.js/core/tsconfig.lib.json
+++ b/@actapi.js/core/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"baseUrl": "./",
+		"baseUrl": "@actapi.js/core",
 		"module": "commonjs",
 		"outDir": "../../dist/out-tsc",
 		"declaration": true,
