--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,11 @@
 			"cache": true,
 			"dependsOn": ["^build"],
 			"inputs": ["default", "^default"]
+		},
+		"@nx/esbuild:esbuild": {
+			"cache": true,
+			"dependsOn": ["^build"],
+			"inputs": ["default", "^default"]
 		}
 	},
 	"defaultBase": "main",
