--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@nx/esbuild": "19.3.2",
 		"@nx/eslint": "19.3.2",
 		"@nx/eslint-plugin": "19.3.2",
 		"@nx/jest": "19.3.2",
@@ -26,6 +27,7 @@
 		"@types/node": "18.16.9",
 		"@typescript-eslint/eslint-plugin": "^7.3.0",
 		"@typescript-eslint/parser": "^7.3.0",
+		"esbuild": "^0.19.2",
 		"eslint": "~8.57.0",
 		"eslint-config-prettier": "^9.0.0",
 		"jest": "^29.4.1",
@@ -37,6 +39,7 @@
 		"typescript": "~5.4.2"
 	},
 	"dependencies": {
+		"axios": "^1.6.0",
 		"tslib": "^2.3.0"
 	}
 }
