--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
+		"baseUrl": "./",
 		"paths": {
 			"@actapi.js/common": ["@actapi.js/common/src/index.ts"],
 			"@actapi.js/core": ["@actapi.js/core/src/index.ts"]
